--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,13 +4,13 @@ server:
 spring:
   thymeleaf:
     cache: false
-    prefix: file:src/main/resources/templates
+    prefix: classpath:/templates #file:src/main/resources/templates
     suffix: .html
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/boot_study
-    username: boot
+    url: jdbc:mariadb://localhost:3306/shoppingmall
+    username: root
     password: 1234
 
   jpa:
